tests/NormalTests/paczka1/fuzzy1/73506977.err
Error in line 1: 4EKe6RR S769 67,6
Error in line 19: 4EKe6RR A678 69,5
Error in line 18: JfKn2MwsjP A95 69,2
Error in line 24: JfKn2MwsjP S728 78,6
Error in line 23: ZbYdf1nsk S728 87,5
Error in line 35: ZbYdf1nsk S769 23,1
Error in line 37: ZbYdf1nsk A678 49,0
